--- a/src/main/resources/templates/rawUI/product/products.html
+++ b/src/main/resources/templates/rawUI/product/products.html
@@ -44,15 +44,18 @@
         <h3>You have been logged out</h3>
     </div>
 
+    <div>
+        <a href="/rawUI/">Home Page</a>
+    </div>
 
     <div>
         <h1>List Products</h1>
         <div>
-            <a href="/rawUI/warehouses/newPhone">Add new Phone</a>
+            <a href="/rawUI/products/newPhone">Add new Phone</a>
         </div>
 
         <div>
-            <a href="/rawUI/warehouses/newLaptop">Add new Laptop</a>
+            <a href="/rawUI/products/newLaptop">Add new Laptop</a>
         </div>
         <br/>
         <br/>
