--- a/src/main/resources/templates/rawUI/warehouse/warehouses.html
+++ b/src/main/resources/templates/rawUI/warehouse/warehouses.html
@@ -42,8 +42,9 @@
     <div th:if="${param.logoutStatus}">
         <h3>You have been logged out</h3>
     </div>
-
-
+    <div>
+        <a href="/rawUI/">Home</a>
+    </div>
     <div>
         <h1>List Warehouse</h1>
         <div>
