Update CRUD Phone

--- a/src/main/resources/templates/rawUI/category/categories.html
+++ b/src/main/resources/templates/rawUI/category/categories.html
@@ -10,7 +10,11 @@
     }
 </style>
 <body>
+
 <div align="center">
+    <div>
+        <a th:href="@{'/rawUI/'}">Home</a>
+    </div>
     <h1>Category List</h1>
     <a href="/rawUI/categories/createCategory">Create New Category</a>
     &nbsp;
