--- a/src/main/resources/templates/rawUI/stock/stocks.html
+++ b/src/main/resources/templates/rawUI/stock/stocks.html
@@ -102,11 +102,11 @@
                 </th>
 
                 <th>
-                    <a th:href="@{'/rawUI/manager/stocks/'+${currentPage} +'?sortField=createdEmployee.id&sortDir='+${reverseSortDir}+'&itemsNumber='+${numberElement}}">
+                    <a th:href="@{'/rawUI/manager/stocks/'+${currentPage} +'?sortField=updatedEmployee.id&sortDir='+${reverseSortDir}+'&itemsNumber='+${numberElement}}">
                         Employee ID Updated </a>
                 </th>
                 <th>
-                    <a th:href="@{'/rawUI/manager/stocks/'+${currentPage} +'?sortField=createdEmployee.lastName&sortDir='+${reverseSortDir}+'&itemsNumber='+${numberElement}}">
+                    <a th:href="@{'/rawUI/manager/stocks/'+${currentPage} +'?sortField=updatedEmployee.lastName&sortDir='+${reverseSortDir}+'&itemsNumber='+${numberElement}}">
                         Employee Name Updated</a>
                 </th>
 
@@ -115,11 +115,11 @@
                         Quantity</a>
                 </th>
                 <th>
-                    <a th:href="@{'/rawUI/manager/stocks/'+${currentPage} +'?sortField=updatedEmployee&sortDir='+${reverseSortDir}+'&itemsNumber='+${numberElement}}">
+                    <a th:href="@{'/rawUI/manager/stocks/'+${currentPage} +'?sortField=createTime&sortDir='+${reverseSortDir}+'&itemsNumber='+${numberElement}}">
                         Create Time</a>
                 </th>
                 <th>
-                    <a th:href="@{'/rawUI/manager/stocks/'+${currentPage} +'?sortField=updatedEmployee&sortDir='+${reverseSortDir}+'&itemsNumber='+${numberElement}}">
+                    <a th:href="@{'/rawUI/manager/stocks/'+${currentPage} +'?sortField=updateTime&sortDir='+${reverseSortDir}+'&itemsNumber='+${numberElement}}">
                         Update Time</a>
                 </th>
                 <th>
