--- a/src/main/resources/templates/rawUI/category/new_category.html
+++ b/src/main/resources/templates/rawUI/category/new_category.html
@@ -2,40 +2,45 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>Create New Category</title>
+    <meta charset="UTF-8">
+    <title>Create New Category</title>
 </head>
 <body>
 <div th:align="center">
-  <h1>Create New Category</h1>
-  <br/>
-  <form th:action="@{'/rawUI/categories/saveCategory'}" th:object="${category}" method="post">
-    <table th:border="0" th:cellpadding="10">
-      <tr>
-        <td><label>Category name:
-          <input type="text" th:field="*{name}"/>
-        </label></td>
-      </tr>
-      <tr>
-        <td><label>Description:
-          <input type="text" th:field="*{description}"/>
-        </label></td>
-      </tr>
-      <tr>
-        <td>
-          <label>Parent Category:
-            <select th:field="*{parentCategory}">
-              <option th:text="root" th:value="${null}"></option>
-              <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"></option>
-            </select>
-          </label>
-        </td>
-      </tr>
-      <tr>
-        <td><button type="submit">Save category</button></td>
-      </tr>
-    </table>
-  </form>
+    <h1>Create New Category</h1>
+    <br/>
+    <form th:action="@{'/rawUI/categories/saveCategory'}" th:object="${category}" method="post">
+        <table th:border="0" th:cellpadding="10">
+            <tr>
+                <td><label>Category name:
+                    <input type="text" th:field="*{name}"/>
+                </label></td>
+            </tr>
+            <tr>
+                <td><label>Description:
+                    <input type="text" th:field="*{description}"/>
+                </label></td>
+            </tr>
+            <tr>
+                <td>
+                    <label>Parent Category:
+                        <select th:field="*{parentCategory}">
+                            <option th:text="root" th:value="${null}"></option>
+                            <option th:each="categoryDto : ${categoryDtoList}" th:value="${categoryDto.id}">
+                                <p th:each="i : ${#numbers.sequence(1,categoryDto.level)}"  th:if="${categoryDto.level > 0}">*</p>
+                                <span th:text="${categoryDto.name}"/>
+                            </option>
+                        </select>
+                    </label>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <button type="submit">Save category</button>
+                </td>
+            </tr>
+        </table>
+    </form>
 </div>
 </body>
 </html>
