--- a/src/main/resources/templates/rawUI/employee/employees.html
+++ b/src/main/resources/templates/rawUI/employee/employees.html
@@ -49,6 +49,9 @@
 
 
     <div>
+        <a th:href="${'/rawUI/'}">Home</a>
+    </div>
+    <div>
         <h1>List Employees</h1>
         <div>
             <a href="/rawUI/admin/newEmployee">Add new Employee</a>
