--- a/src/main/resources/templates/rawUI/product/products.html
+++ b/src/main/resources/templates/rawUI/product/products.html
@@ -51,6 +51,15 @@
     <div>
         <h1>List Products</h1>
         <div>
+            <a href="/rawUI/products/phones">View Phones</a>
+        </div>
+
+        <div>
+            <a href="/rawUI/products/laptops">View Laptop</a>
+        </div>
+
+        <div>
+        <div>
             <a href="/rawUI/products/newPhone">Add new Phone</a>
         </div>
 
